--- a/package.json
+++ b/package.json
@@ -1,42 +1,58 @@
-
 {
     "name": "business-options-admin",
     "private": true,
     "version": "0.1.0",
     "type": "module",
     "scripts": {
-      "dev": "vite",
-      "build": "vite build",
-      "preview": "vite preview"
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview"
     },
     "dependencies": {
-      "@headlessui/react": "^1.7.14",
-      "@hookform/resolvers": "^3.1.0",
-      "axios": "^1.4.0",
-      "class-variance-authority": "^0.6.0",
-      "clsx": "^1.2.1",
-      "date-fns": "^2.30.0",
-      "firebase": "^9.22.0",
-      "lucide-react": "^0.221.0",
-      "react": "^18.2.0",
-      "react-day-picker": "^8.7.1",
-      "react-dom": "^18.2.0",
-      "react-dropzone": "^14.2.3",
-      "react-hook-form": "^7.43.9",
-      "react-hot-toast": "^2.4.1",
-      "react-query": "^3.39.3",
-      "react-router-dom": "^6.11.2",
-      "recharts": "^2.6.2",
-      "tailwind-merge": "^1.12.0",
-      "tailwindcss-animate": "^1.0.5",
-      "zod": "^3.21.4",
-      "zustand": "^4.3.8"
+        "@headlessui/react": "^1.7.14",
+        "@hookform/resolvers": "^3.1.0",
+        "@radix-ui/react-accordion": "^1.2.3",
+        "@radix-ui/react-alert-dialog": "^1.1.6",
+        "@radix-ui/react-checkbox": "^1.1.4",
+        "@radix-ui/react-dialog": "^1.1.6",
+        "@radix-ui/react-dropdown-menu": "^2.1.6",
+        "@radix-ui/react-label": "^2.1.2",
+        "@radix-ui/react-navigation-menu": "^1.2.5",
+        "@radix-ui/react-popover": "^1.1.6",
+        "@radix-ui/react-radio-group": "^1.2.3",
+        "@radix-ui/react-select": "^2.1.6",
+        "@radix-ui/react-separator": "^1.1.2",
+        "@radix-ui/react-switch": "^1.1.3",
+        "@radix-ui/react-tabs": "^1.1.3",
+        "@radix-ui/react-tooltip": "^1.1.8",
+        "axios": "^1.4.0",
+        "class-variance-authority": "^0.6.0",
+        "clsx": "^1.2.1",
+        "cmdk": "^1.1.1",
+        "date-fns": "^2.30.0",
+        "firebase": "^9.22.0",
+        "lucide-react": "^0.221.0",
+        "react": "^18.2.0",
+        "react-day-picker": "^8.7.1",
+        "react-dom": "^18.2.0",
+        "react-dropzone": "^14.2.3",
+        "react-helmet-async": "^2.0.5",
+        "react-hook-form": "^7.43.9",
+        "react-hot-toast": "^2.4.1",
+        "react-query": "^3.39.3",
+        "react-router-dom": "^6.11.2",
+        "recharts": "^2.6.2",
+        "tailwind-merge": "^1.12.0",
+        "tailwindcss-animate": "^1.0.5",
+        "uuid": "^11.1.0",
+        "zod": "^3.21.4",
+        "zustand": "^4.3.8"
     },
     "devDependencies": {
-      "@vitejs/plugin-react": "^4.0.0",
-      "autoprefixer": "^10.4.14",
-      "postcss": "^8.4.23",
-      "tailwindcss": "^3.3.2",
-      "vite": "^4.3.9"
+        "@vitejs/plugin-react": "^4.0.0",
+        "autoprefixer": "^10.4.14",
+        "postcss": "^8.4.23",
+        "tailwindcss": "^3.3.2",
+        "vite": "^4.3.9"
     }
-  }
+}
